<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="am">AM</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_is_open">application %s already open</string>
    <string name="app_name">source-service</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apr">Apr</string>
    <string name="aug">Aug</string>
    <string name="bkg_screen_shot">Screen Shot</string>
    <string name="bkp_camera">Camera</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">cancel</string>
    <string name="cancel_file_transfer">To cancel the</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_file_path">Choose</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="day_time_picker" />
    <string name="dec">Dec</string>
    <string name="donot_allow_reparent">now is multwindow donnot reparent</string>
    <string name="download_completes">Download success</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exit">Exit</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="extended_screen_connecting">Connect to the extension screen...</string>
    <string name="extended_screen_destroy">Extended screen has destroyed</string>
    <string name="extended_screen_exit">The expansion screen has exited</string>
    <string name="extended_screen_not_connected">Extended screen not connected</string>
    <string name="extended_screen_request_open">Request to open the extension screen</string>
    <string name="extended_screen_reset">Reconfigure the extension screen...</string>
    <string name="extended_screen_running">Screen expansion in progress</string>
    <string name="extended_screen_send_request_open">Actively send a request to open the extension screen</string>
    <string name="extended_screen_wait_connect">Waiting to connect to the extension screen...</string>
    <string name="feb">Feb</string>
    <string name="file">File</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="in_transmitting">Transferring</string>
    <string name="item_view_role_description">Tab</string>
    <string name="jan">Jan</string>
    <string name="jul">Jul</string>
    <string name="jun">Jun</string>
    <string name="m3_sys_typescale_body_large_font">sans-serif</string>
    <string name="m3_sys_typescale_body_medium_font">sans-serif</string>
    <string name="m3_sys_typescale_body_small_font">sans-serif</string>
    <string name="m3_sys_typescale_display_large_font">sans-serif</string>
    <string name="m3_sys_typescale_display_medium_font">sans-serif</string>
    <string name="m3_sys_typescale_display_small_font">sans-serif</string>
    <string name="m3_sys_typescale_headline_large_font">sans-serif</string>
    <string name="m3_sys_typescale_headline_medium_font">sans-serif</string>
    <string name="m3_sys_typescale_headline_small_font">sans-serif</string>
    <string name="m3_sys_typescale_label_large_font">sans-serif-medium</string>
    <string name="m3_sys_typescale_label_medium_font">sans-serif-medium</string>
    <string name="m3_sys_typescale_label_small_font">sans-serif-medium</string>
    <string name="m3_sys_typescale_title_large_font">sans-serif</string>
    <string name="m3_sys_typescale_title_medium_font">sans-serif-medium</string>
    <string name="m3_sys_typescale_title_small_font">sans-serif-medium</string>
    <string name="mar">Mar</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">%1$s o\'clock</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="max_display">display count reached max,close other display first</string>
    <string name="may">May</string>
    <string name="module_pc_connect">PC Connection</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">OK</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="notification_cast_content">Cast service running</string>
    <string name="notification_cast_title">airlink2.0</string>
    <string name="pad_click">Tap</string>
    <string name="pad_control_center">Control Center</string>
    <string name="pad_double_finger_sliding_left_and_right">Swipe left or right with two fingers</string>
    <string name="pad_double_finger_sliding_up_and_down">Swipe up or down with two fingers</string>
    <string name="pad_finger_click">Tap with one finger</string>
    <string name="pad_finger_long_press">Long press with one finger</string>
    <string name="pad_long_press">Long press</string>
    <string name="pad_mouse_left">Left mouse button</string>
    <string name="pad_mouse_left_long_press">Long press the left mouse button</string>
    <string name="pad_mouse_right">Right mouse button</string>
    <string name="pad_mouse_tip1">Swipe inward with two fingers from the left or right edge of the touchpad</string>
    <string name="pad_mouse_tip2">Swipe inward with two fingers from the left or right edge of the touchpad</string>
    <string name="pad_mouse_wheel">Mouse wheel</string>
    <string name="pad_return">Back</string>
    <string name="pad_shift_up">Shift + mouse wheel</string>
    <string name="pad_short_cut_1">HOME</string>
    <string name="pad_short_cut_2">ESC</string>
    <string name="pad_short_cut_4">Alt+C</string>
    <string name="pad_short_cut_5">Alt+N</string>
    <string name="pad_short_cut_func">Function</string>
    <string name="pad_short_cut_mouse_keyboard">Keyboard + mouse</string>
    <string name="pad_short_cut_notification_center">Notification Center</string>
    <string name="pad_short_cut_slide">Slide horizontally</string>
    <string name="pad_short_cut_touch_board">Touchpad</string>
    <string name="pad_sliding_up_and_down">Swipe up or down</string>
    <string name="toggle_audio_phone">phone audio</string>
</resources>