<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.transsion.connectx.mirror.source.pad.view.ShortCutTextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            app:textCenter="@string/pad_short_cut_mouse_keyboard"
            app:textLeft="@string/pad_short_cut_func"
            app:textRight="@string/pad_short_cut_touch_board"/>
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:background="@color/teal_200"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp">
            <com.transsion.connectx.mirror.source.pad.view.ShortCutTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:textCenter="@string/pad_shift_up"
                app:textLeft="@string/pad_short_cut_slide"
                app:textRight="@string/pad_double_finger_sliding_left_and_right"/>
            <com.transsion.connectx.mirror.source.pad.view.ShortCutTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:textCenter="@string/pad_mouse_wheel"
                app:textLeft="@string/pad_sliding_up_and_down"
                app:textRight="@string/pad_double_finger_sliding_up_and_down"/>
            <com.transsion.connectx.mirror.source.pad.view.ShortCutTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:textCenter="@string/pad_mouse_left"
                app:textLeft="@string/pad_click"
                app:textRight="@string/pad_finger_click"/>
            <com.transsion.connectx.mirror.source.pad.view.ShortCutTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:textCenter="@string/pad_mouse_left_long_press"
                app:textLeft="@string/pad_long_press"
                app:textRight="@string/pad_finger_long_press"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:background="@color/teal_200"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp">
            <com.transsion.connectx.mirror.source.pad.view.ShortCutTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:textCenter="@string/pad_mouse_right"
                app:textLeft="@string/pad_return"
                app:textRight="@string/pad_mouse_tip1"/>
            <com.transsion.connectx.mirror.source.pad.view.ShortCutTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:textCenter="@string/pad_short_cut_2"
                app:textLeft="@string/pad_short_cut_1"/>
            <com.transsion.connectx.mirror.source.pad.view.ShortCutTextView
                android:id="@+id/short_cut_more_line_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <com.transsion.connectx.mirror.source.pad.view.ShortCutTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:textCenter="@string/pad_short_cut_4"
                app:textLeft="@string/pad_control_center"
                app:textRight="@string/pad_mouse_tip2"/>
            <com.transsion.connectx.mirror.source.pad.view.ShortCutTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:textCenter="@string/pad_short_cut_5"
                app:textLeft="@string/pad_short_cut_notification_center"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:background="@color/teal_200"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp">
            <com.transsion.connectx.mirror.source.pad.view.ShortCutTextView
                android:id="@+id/short_cut_more_line_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
