<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:weightSum="5">
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3">
        <TextView
            android:textSize="14sp"
            android:textColor="@color/notification_title"
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_cast_title"
            android:layout_marginHorizontal="10dp"/>
        <TextView
            android:textSize="12sp"
            android:textColor="@color/notification_title"
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/notification_cast_content"
            android:layout_marginHorizontal="10dp"/>
    </LinearLayout>
    <RelativeLayout
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.3">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/btn_toggle_audio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_audio"/>
            <TextView
                android:textSize="10sp"
                android:gravity="center"
                android:id="@+id/tv_toggle_audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/toggle_audio_phone"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.7">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_exit"/>
            <TextView
                android:textSize="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/exit"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
